--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,15 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-25 21:36:35,643:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n",
-      "[WARNING] [2022-12-25 21:36:36,789:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
+      "[WARNING] [2022-12-25 21:40:41,732:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n",
+      "[WARNING] [2022-12-25 21:40:42,936:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -332,22 +332,22 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "          -1       0.50      0.04      0.08        93\n",
-      "           0       0.50      0.06      0.10       208\n",
-      "           1       0.79      0.99      0.88      1097\n",
+      "           0       0.44      0.07      0.12       208\n",
+      "           1       0.80      0.98      0.88      1097\n",
       "\n",
       "    accuracy                           0.79      1398\n",
-      "   macro avg       0.60      0.36      0.35      1398\n",
-      "weighted avg       0.73      0.79      0.71      1398\n",
+      "   macro avg       0.58      0.36      0.36      1398\n",
+      "weighted avg       0.72      0.79      0.71      1398\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7868383404864091"
+       "0.7854077253218884"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,13 +355,15 @@
    "source": [
     "# RandomForestClassifier\n",
     "clf = RandomForestClassifier(n_estimators=500, max_depth=15, random_state=0)\n",
+    "_y_train = y_train + 1\n",
+    "_y_test = y_test + 1\n",
     "model, report = modelPipeline(X_train, y_train, X_test, y_test, clf, 'out/models/clf.model')\n",
     "report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -370,23 +372,23 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.38      0.05      0.09        93\n",
-      "           1       0.38      0.11      0.17       208\n",
-      "           2       0.80      0.97      0.88      1097\n",
+      "           0       0.39      0.08      0.13        93\n",
+      "           1       0.41      0.12      0.19       208\n",
+      "           2       0.81      0.97      0.88      1097\n",
       "\n",
       "    accuracy                           0.78      1398\n",
-      "   macro avg       0.52      0.38      0.38      1398\n",
-      "weighted avg       0.71      0.78      0.72      1398\n",
+      "   macro avg       0.54      0.39      0.40      1398\n",
+      "weighted avg       0.72      0.78      0.73      1398\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7796852646638054"
+       "0.7839771101573677"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +429,7 @@
        "0.7846924177396281"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +468,7 @@
        "0.7846924177396281"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,14 +503,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-25 21:37:16,440:Client-AutoML(1):895437b0-848b-11ed-983d-1da6501c908a] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
+      "[WARNING] [2022-12-25 21:41:24,663:Client-AutoML(1):1d7a22e4-848c-11ed-983d-1da6501c908a] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
      ]
     }
    ],
@@ -527,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -535,18 +537,18 @@
      "output_type": "stream",
      "text": [
       "auto-sklearn results:\n",
-      "  Dataset name: 895437b0-848b-11ed-983d-1da6501c908a\n",
+      "  Dataset name: 1d7a22e4-848c-11ed-983d-1da6501c908a\n",
       "  Metric: accuracy\n",
-      "  Best validation score: 0.797290\n",
+      "  Best validation score: 0.791328\n",
       "  Number of target algorithm runs: 1\n",
       "  Number of successful target algorithm runs: 1\n",
       "  Number of crashed target algorithm runs: 0\n",
       "  Number of target algorithms that exceeded the time limit: 0\n",
       "  Number of target algorithms that exceeded the memory limit: 0\n",
       "\n",
-      "          rank  ensemble_weight           type     cost   duration\n",
-      "model_id                                                          \n",
-      "2            1              1.0  random_forest  0.20271  21.684022\n"
+      "          rank  ensemble_weight           type      cost   duration\n",
+      "model_id                                                           \n",
+      "2            1              1.0  random_forest  0.208672  22.465421\n"
      ]
     }
    ],
@@ -557,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
