compare with history

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +140,13 @@
     "training_data = cleanData(train_df, 'training', clean = False, clearData = True)\n",
     "print(f\"Cleaned Training dataset size = {training_data.shape}\")\n",
     "# Data cleaning\n",
-    "dev_data = cleanData(dev_df, 'dev', clean = False, clearData = False)\n",
+    "dev_data = cleanData(dev_df, 'dev', clean = False, clearData = True)\n",
     "print(f\"Cleaned Dev dataset size = {dev_data.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,15 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-25 21:40:41,732:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n",
-      "[WARNING] [2022-12-25 21:40:42,936:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
+      "[WARNING] [2022-12-25 22:01:37,440:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n",
+      "[WARNING] [2022-12-25 22:01:38,611:gensim.models.word2vec] Each 'sentences' item should be a list of words (usually unicode strings). First item here is instead plain <class 'str'>.\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -332,22 +332,22 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "          -1       0.50      0.04      0.08        93\n",
-      "           0       0.44      0.07      0.12       208\n",
+      "           0       0.42      0.08      0.13       208\n",
       "           1       0.80      0.98      0.88      1097\n",
       "\n",
-      "    accuracy                           0.79      1398\n",
-      "   macro avg       0.58      0.36      0.36      1398\n",
-      "weighted avg       0.72      0.79      0.71      1398\n",
+      "    accuracy                           0.78      1398\n",
+      "   macro avg       0.57      0.37      0.36      1398\n",
+      "weighted avg       0.72      0.78      0.71      1398\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7854077253218884"
+       "0.7839771101573677"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -372,23 +372,23 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.39      0.08      0.13        93\n",
-      "           1       0.41      0.12      0.19       208\n",
-      "           2       0.81      0.97      0.88      1097\n",
+      "           0       0.33      0.08      0.12        93\n",
+      "           1       0.33      0.08      0.12       208\n",
+      "           2       0.80      0.97      0.87      1097\n",
       "\n",
       "    accuracy                           0.78      1398\n",
-      "   macro avg       0.54      0.39      0.40      1398\n",
-      "weighted avg       0.72      0.78      0.73      1398\n",
+      "   macro avg       0.49      0.37      0.37      1398\n",
+      "weighted avg       0.70      0.78      0.71      1398\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7839771101573677"
+       "0.7753934191702432"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "0.7846924177396281"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "0.7846924177396281"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,14 +503,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-25 21:41:24,663:Client-AutoML(1):1d7a22e4-848c-11ed-983d-1da6501c908a] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
+      "[WARNING] [2022-12-25 22:02:19,413:Client-AutoML(1):093be1d2-848f-11ed-983d-1da6501c908a] Capping the per_run_time_limit to 949.0 to have time for a least 2 models in each process.\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -537,9 +537,9 @@
      "output_type": "stream",
      "text": [
       "auto-sklearn results:\n",
-      "  Dataset name: 1d7a22e4-848c-11ed-983d-1da6501c908a\n",
+      "  Dataset name: 093be1d2-848f-11ed-983d-1da6501c908a\n",
       "  Metric: accuracy\n",
-      "  Best validation score: 0.791328\n",
+      "  Best validation score: 0.795664\n",
       "  Number of target algorithm runs: 1\n",
       "  Number of successful target algorithm runs: 1\n",
       "  Number of crashed target algorithm runs: 0\n",
@@ -548,7 +548,7 @@
       "\n",
       "          rank  ensemble_weight           type      cost   duration\n",
       "model_id                                                           \n",
-      "2            1              1.0  random_forest  0.208672  22.465421\n"
+      "2            1              1.0  random_forest  0.204336  20.671741\n"
      ]
     }
    ],
@@ -559,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score 0.7825464949928469\n"
+      "Accuracy score 0.7761087267525035\n"
      ]
     }
    ],
